# tiny-executor-c

./: CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: ci.yml
examples/: texec_example.c
include/texec/: base.h  diagnostics.h  executor.h  executor_create_info.h  executor_submit_info.h  queue.h  queue_create_info.h  task.h  task_group.h  task_group_create_info.h  task_handle.h  texec.h  version.h
src/: allocator_internal.h  default_allocator.c  executor.c  executor_internal.h  queue.c  ringbuf.c  task_group.c  task_handle.c  task_handle_internal.h  thread_pool_executor.c
src/internal/: allocator.h  diagnostics.h  executor.h  ringbuf.h  task_handle.h  work_item.h
